# WisniaLang

./: .gitignore  CMakeLists.txt  README.md  codecov.yml  grammar.bnf
.github/workflows/: benchmarks.yml  release.yml  tests.yml  ubuntu.yml
benchmarks/29988-lines-of-code/: .gitignore  main.py  run.sh
benchmarks/fibonacci/: fibonacci.cpp  fibonacci.rs  fibonacci.wsn  run.sh
cmake/: CodeCoverage.cmake  Dependencies.cmake  deps.cmake  opts.cmake
coverage/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/codegen/: CMakeLists.txt  CodeFragment.hpp  CodeGenerator.cpp  CodeGenerator.hpp  MachineCodeTable.hpp
src/backend/elf/: CMakeLists.txt  ELF.cpp  ELF.hpp
src/backend/ir/: CMakeLists.txt  IRGenerator.cpp  IRGenerator.hpp  Instruction.cpp  Instruction.hpp  InstructionPrintHelper.cpp  Modules.cpp  Modules.hpp  Operation.hpp
src/backend/optimize/: CMakeLists.txt  IROptimization.cpp  IROptimization.hpp  InstructionSimplification.cpp  InstructionSimplification.hpp
src/backend/register/: CMakeLists.txt  RegisterAllocator.cpp  RegisterAllocator.hpp
src/frontend/: CMakeLists.txt
src/frontend/ast/: AST.h  AST.hpp  CMakeLists.txt  Conditionals.h  Definitions.h  Expressions.h  Loops.h  Root.h  Statements.h  Types.h  Variables.h
src/frontend/ast/nodes/: Conditionals.h  Conditionals.hpp  Definitions.h  Definitions.hpp  Expressions.h  Expressions.hpp  Loops.h  Loops.hpp  Root.h  Root.hpp  Statements.h  Statements.hpp  Types.h  Types.hpp  Variable.hpp  Variables.h
src/frontend/basic/: CMakeLists.txt  Position.hpp  PositionInFile.h  Register.hpp  TType.h  TType.hpp  Token.h  Token.hpp
src/frontend/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Lexer.hpp
src/frontend/lexer/dfa/: CMakeLists.txt  DFA.cpp  DFA.h
src/frontend/lexer/token/: CMakeLists.txt  Token.h  TokenType.h
src/frontend/parser/: CMakeLists.txt  Parser.cpp  Parser.h  Parser.hpp
src/frontend/parser/ast/: AST.h  CMakeLists.txt
src/frontend/sema/: CMakeLists.txt  NameResolver.cpp  NameResolver.h  NameResolver.hpp  NodeCollector.cpp  NodeCollector.h  NodeCollector.hpp  NodeCollector.tpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp
src/utilities/: ByteArray.hpp  CMakeLists.txt  Exception.h  Exceptions.h  Exceptions.hpp  Visitor.h  Visitor.hpp
tests/: CMakeLists.txt
tests/intermediate-representation/: CMakeLists.txt  IRGeneratorTest.cpp  IRGeneratorTestWithRegisterAllocation.cpp  IRGeneratorTestWithoutRegisterAllocation.cpp
tests/lexical-analysis/: BasicIdentifierTest.cpp  CMakeLists.txt  IdentifierTest.cpp  LexerTest.cpp  OperatorTest.cpp  ReadFromFile.cpp  TokenTest.cpp  example.cpp  sample.wsn
tests/programs/: CMakeLists.txt  ProgramTest.cpp
tests/register-allocation/: CMakeLists.txt  RegisterAllocatorTest.cpp
tests/semantic-analysis/: ASTPrinterTest.cpp  CMakeLists.txt  NameResolverTest.cpp  NodeCollectorTest.cpp  SemanticTest.cpp  SemanticTestFixture.h  SemanticTestFixture.hpp
tests/syntax-analysis/: CMakeLists.txt  ConditionalTest.cpp  ConditionalsTest.cpp  FunctionTest.cpp  FunctionsTest.cpp  LoopTest.cpp  LoopsTest.cpp  ParserTest.cpp
tests/utilities/: ByteArrayTest.cpp  CMakeLists.txt
